Fuckn done some stuff

--- a/band.html
+++ b/band.html
@@ -26,6 +26,62 @@
 <body>
   <center>
   <h1>Rocket Jockey Moon Monkeys</h1>
+  <h2>The Band</h2>
+  <br>
+  <br>
+  <b><h2>Jayden Greville</h2></b>
+  <p><i>Gayden</i></p>
+  <img src="images/gayden.jpg" alt="jesus christ" height="250"/>
+  <h4>Instruments: <b>Drums, Vocals</b></h4>
+  <p>2019-present</p>
+  <p>Died, came back from dead, ended up with no life, founded band as Jayden & The Vampires with two other people.</p>
+  <p><i>"I died lol"</i></p>
+  <br>
+  <b><h2>Caleb Vranesic</h2></b>
+  <p><i>Kleb</i></p>
+  <img src="images/kleb.jpg" alt="hot" height="250"/>
+  <h4>Instruments: <b>Guitar, Drums, Vocals</b></h4>
+  <p>2019-present</p>
+  <p>Plays guitar. Founding Member.</p>
+  <p><i>"I play guitar, very not well"</i></p>
+  <br>
+  <b><h2>Connor McGettigan</h2></b>
+  <p><i>Captain VB</i></p>
+  <img src="images/vb.jpg" alt="never sober" height="250"/>
+  <h4>Instruments: <b>Bass, Guitar, Vocals</b></h4>
+  <p>2019-present</p>
+  <p>Plays instruments, founding member, alcoholic.</p>
+  <p><i>"God I could do with some beer."</i></p>
+  <br>
+  <h1 style="color: black;" hidden>The Coolest Member</h1>
+  <b><h2>Connor Young</h2></b>
+  <p><i>Hippy</i></p>
+  <h4>Instruments: <b>Recorder, Keyboard, Harmonica, Vocals</b></h4>
+  <p>2020-present</p>
+  <p>Can't actually play any instruments, joined Joe Mama's Sleep Paralysis Demon for a talent show. We did(n't) win.</p>
+  <p><i>"Quote goes here"</i></p>
+  <br>
+  <b><h2>X</h2></b>
+  <p><i>Monkey</i></p>
+  <img src="images/gongiveittoya.jpg" height="250" alt="gon give it to ya"/>
+  <h4>Instruments: <b>Drums</b></h4>
+  <p>2020-present</p>
+  <p>Ape from the congo, spent his youth beating rocks with sticks. As an adult he utilised his rock beating skills to learn the drums and joined Joe Mama's Sleep Paralysis Demon for the school talent show.</p>
+  <p><i>"Kefe"</i></p>
+  <br>
+  <b><h2>Johon</h2></b>
+  <p><i>Horse</i></p>
+  <h4>Instruments: <b>Guitar, Vocals</b></h4>
+  <p>2020-present</p>
+  <p>Man who plays guitar and sings. Joined after the worlds most amazing musical performance to help advance the band's career.</p>
+  <p><i>"You might unlock his secret gay."</i></p>
+  <br>
+  <b><h2>Cheg</h2></b>
+  <p><i>The Leg</i></p>
+  <h4>Instruments: <b>Bass, Guitar, Vocals</b></h4>
+  <p>2020-present</p>
+  <p>The band realised they were technically a boy band due to being all male, so they employed a female member to stop being a boy band.</p>
+  <p><i>"Hello, I am Cheg The Leg. I definitely said this."</i></p>
   </center>
 </body>
 </html>
