--- a/band.html
+++ b/band.html
@@ -56,7 +56,7 @@
   <h1 style="color: black;" hidden>The Coolest Member</h1>
   <b><h2>Connor Young</h2></b>
   <p><i>Hippy</i></p>
-  <img src="images/hippy.jpg" alt="hippy" height="250"/>
+  <img src="images/hippy.png" alt="hippy" height="250"/>
   <h4>Instruments: <b>Recorder, Keyboard, Harmonica, Vocals</b></h4>
   <p>2020-present</p>
   <p>Can't actually play any instruments, joined Joe Mama's Sleep Paralysis Demon for a talent show. We did(n't) win.</p>
