--- a/band.html
+++ b/band.html
@@ -70,7 +70,7 @@
   <p>Ape from the congo, spent his youth beating rocks with sticks. As an adult he utilised his rock beating skills to learn the drums and joined Joe Mama's Sleep Paralysis Demon for the school talent show.</p>
   <p><i>"Kefe"</i></p>
   <br>
-  <b><h2>Johon</h2></b>
+  <b><h2>John Walton</h2></b>
   <p><i>Horse</i></p>
   <h4>Instruments: <b>Guitar, Vocals</b></h4>
   <p>2020-present</p>
