--- a/band.html
+++ b/band.html
@@ -82,7 +82,7 @@
   <h4>Instruments: <b>Bass, Guitar, Vocals</b></h4>
   <p>2020-present</p>
   <p>The band realised they were technically a boy band due to being all male, so they employed a female member to stop being a boy band.</p>
-  <p><i>"Hello, I am Cheg The Leg. I definitely said this."</i></p>
+  <p><i>"Cheg."</i></p>
   </center>
 </body>
 </html>
