--- a/band.html
+++ b/band.html
@@ -72,6 +72,7 @@
   <br>
   <b><h2>John Walton</h2></b>
   <p><i>Horse</i></p>
+  <img src="images/horse.jpg" alt="horse" height="250"/>
   <h4>Instruments: <b>Guitar, Vocals</b></h4>
   <p>2020-present</p>
   <p>Man who plays guitar and sings. Joined after the worlds most amazing musical performance to help advance the band's career.</p>
@@ -79,6 +80,7 @@
   <br>
   <b><h2>Cheg</h2></b>
   <p><i>The Leg</i></p>
+  <img src="images/cheg.jpg" alt="cheg" height="250"/>
   <h4>Instruments: <b>Bass, Guitar, Vocals</b></h4>
   <p>2020-present</p>
   <p>The band realised they were technically a boy band due to being all male, so they employed a female member to stop being a boy band.</p>
