--- a/shows.html
+++ b/shows.html
@@ -7,6 +7,9 @@
     color: #14b0b8;
     font-family: "sans-serif", sans-serif;
   }
+  p {
+  margin: 20px;
+  }
 </style>
 <link rel="icon" href="icon.png">
 <img src="banner2.jpg" width="1440" height="400" alt="RJMM Banner"/>
