--- a/social.html
+++ b/social.html
@@ -7,6 +7,9 @@
     color: #14b0b8;
     font-family: "sans-serif", sans-serif;
   }
+  p {
+  margin: 20px;
+  }
 </style>
 <link rel="icon" href="icon.png">
 <img src="banner2.jpg" width="1440" height="400" alt="RJMM Banner"/>
@@ -26,6 +29,20 @@
 <body>
   <center>
   <h1>Rocket Jockey Moon Monkeys</h1>
+  <br>
+  <h2>Social Networking Links</h2>
+  </center>
+  <p>The links below link to our social media and music hosting sites. These will allow you to see new music and updates about the band, such as potential shows or busking performances or any delays and announcements with music.</p>
+  <center>
+  <a href="https://twitter.com/rjmmonkey">Twitter</a>
+  <br>
+  <a href="https://www.instagram.com/the_rocketjockeymoonmonkeys/">Instagram</a>
+  <br>
+  <a href="https://www.youtube.com/channel/UCu0uQK0nNwPU8UkgZNbJEMg">YouTube</a>
+  <br>
+  <a href="https://soundcloud.com/rjmm">Soundcloud</a>
+  <br>
+  <a href="https://rjmm.bandcamp.com/">Bandcamp</a>
   </center>
 </body>
 </html>
