--- a/social.html
+++ b/social.html
@@ -34,15 +34,19 @@
   </center>
   <p>The links below link to our social media and music hosting sites. These will allow you to see new music and updates about the band, such as potential shows or busking performances or any delays and announcements with music.</p>
   <center>
-  <a href="https://twitter.com/rjmmonkey">Twitter</a>
+  <a href="https://twitter.com/rjmmonkey"><img src="images/twitter.png" alt="Twitter" height="50"></a>
   <br>
-  <a href="https://www.instagram.com/the_rocketjockeymoonmonkeys/">Instagram</a>
   <br>
-  <a href="https://www.youtube.com/channel/UCu0uQK0nNwPU8UkgZNbJEMg">YouTube</a>
+  <a href="https://www.instagram.com/the_rocketjockeymoonmonkeys/"><img src="images/instagram.png" alt="Instagram" height="50"></a>
   <br>
-  <a href="https://soundcloud.com/rjmm">Soundcloud</a>
   <br>
-  <a href="https://rjmm.bandcamp.com/">Bandcamp</a>
+  <a href="https://www.youtube.com/channel/UCu0uQK0nNwPU8UkgZNbJEMg"><img src="images/youtube.png" alt="YouTube" height="50"></a>
+  <br>
+  <br>
+  <a href="https://soundcloud.com/rjmm"><img src="images/soundcloud.png" alt="Soundcloud" height="50"></a>
+  <br>
+  <br>
+  <a href="https://rjmm.bandcamp.com/"><img src="images/bandcamp.png" alt="Bandcamp" height="50"></a>
   </center>
 </body>
 </html>
