--- a/band.html
+++ b/band.html
@@ -31,7 +31,7 @@
   <b><h2>Jayden Greville</h2></b>
   <p><i>Gayden</i></p>
   <img src="images/gayden.jpg" alt="jesus christ" height="250"/>
-  <h4>Instruments: <b>Drums, Vocals</b></h4>
+  <h4>Instruments: <b>Drums</b></h4>
   <p>2019-present</p>
   <p>Died, came back from dead, ended up with no life, founded band as Jayden & The Vampires with two other people.</p>
   <p><i>"I died lol"</i></p>
@@ -39,7 +39,7 @@
   <b><h2>Caleb Vranesic</h2></b>
   <p><i>Kleb</i></p>
   <img src="images/kleb.jpg" alt="hot" height="250"/>
-  <h4>Instruments: <b>Guitar, Drums, Vocals</b></h4>
+  <h4>Instruments: <b>Multi-instrumentalist</b></h4>
   <p>2019-present</p>
   <p>Plays guitar. Founding Member.</p>
   <p><i>"I play guitar, very not well"</i></p>
@@ -47,7 +47,7 @@
   <b><h2>Connor McGettigan</h2></b>
   <p><i>Captain VB</i></p>
   <img src="images/vb.jpg" alt="never sober" height="250"/>
-  <h4>Instruments: <b>Bass, Guitar, Vocals</b></h4>
+  <h4>Instruments: <b>Multi-instrumentalist</b></h4>
   <p>2019-present</p>
   <p>Plays instruments, founding member, alcoholic.</p>
   <p><i>"God I could do with some beer."</i></p>
@@ -56,7 +56,7 @@
   <b><h2>Connor Young</h2></b>
   <p><i>Hippy</i></p>
   <img src="images/hippy.png" alt="hippy" height="250"/>
-  <h4>Instruments: <b>Recorder, Keyboard, Harmonica, Vocals</b></h4>
+  <h4>Instruments: <b>Recorder, Keyboard, Harmonica</b></h4>
   <p>2020-present</p>
   <p>Can't actually play any instruments, joined Joe Mama's Sleep Paralysis Demon for a talent show. We did(n't) win.</p>
   <p><i>"Quote goes here"</i></p>
@@ -72,7 +72,7 @@
   <b><h2>John Walton</h2></b>
   <p><i>Horse</i></p>
   <img src="images/horse.jpg" alt="horse" height="250"/>
-  <h4>Instruments: <b>Guitar, Vocals</b></h4>
+  <h4>Instruments: <b>Guitar</b></h4>
   <p>2020-present</p>
   <p>Man who plays guitar and sings. Joined after the worlds most amazing musical performance to help advance the band's career.</p>
   <p><i>"You might unlock his secret gay."</i></p>
@@ -80,7 +80,7 @@
   <b><h2>Cheg</h2></b>
   <p><i>The Leg</i></p>
   <img src="images/cheg.jpg" alt="cheg" height="250"/>
-  <h4>Instruments: <b>Bass, Guitar, Vocals</b></h4>
+  <h4>Instruments: <b>Bass, Guitar</b></h4>
   <p>2020-present</p>
   <p>The band realised they were technically a boy band due to being all male, so they employed a female member to stop being a boy band.</p>
   <p><i>"Cheg."</i></p>
