--- a/band.html
+++ b/band.html
@@ -39,7 +39,7 @@
   <b><h2>Caleb Vranesic</h2></b>
   <p><i>Kleb</i></p>
   <img src="images/kleb.jpg" alt="hot" height="250"/>
-  <h4>Instruments: <b>Multi-instrumentalist</b></h4>
+  <h4>Instruments: <b>Guitar, Bass, Drums</b></h4>
   <p>2019-present</p>
   <p>Plays guitar. Founding Member.</p>
   <p><i>"I play guitar, very not well"</i></p>
@@ -47,7 +47,7 @@
   <b><h2>Connor McGettigan</h2></b>
   <p><i>Captain VB</i></p>
   <img src="images/vb.jpg" alt="never sober" height="250"/>
-  <h4>Instruments: <b>Multi-instrumentalist</b></h4>
+  <h4>Instruments: <b>Bass, Guitar, Drums, Piano</b></h4>
   <p>2019-present</p>
   <p>Plays instruments, founding member, alcoholic.</p>
   <p><i>"God I could do with some beer."</i></p>
