--- a/band.html
+++ b/band.html
@@ -49,7 +49,7 @@
   <img src="images/vb.jpg" alt="never sober" height="250"/>
   <h4>Instruments: <b>Bass, Guitar, Drums, Piano</b></h4>
   <p>2019-present</p>
-  <p>Plays instruments, founding member, alcoholic.</p>
+  <p>Plays instruments, founding member.</p>
   <p><i>"God I could do with some beer."</i></p>
   <br>
   <h1 style="color: black;" hidden>The Coolest Member</h1>
