--- a/social.html
+++ b/social.html
@@ -12,7 +12,7 @@
   }
 </style>
 <link rel="icon" href="icon.png">
-<img src="banner2.jpg" width="1440" height="400" alt="RJMM Banner"/>
+<!-- <img src="banner2.jpg" width="1440" height="400" alt="RJMM Banner"/> -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <ul class="nav navbar-nav">
