--- a/band.html
+++ b/band.html
@@ -28,6 +28,7 @@
   <h1>Rocket Jockey Moon Monkeys</h1>
   <h2>The Band</h2>
   <br>
+  <span class="border">
   <b><h2>Jayden Greville</h2></b>
   <p><i>Gayden</i></p>
   <img src="images/gayden.jpg" alt="jesus christ" height="250"/>
@@ -35,6 +36,7 @@
   <p>2019-present</p>
   <p>Died, came back from dead, ended up with no life, founded band as Jayden & The Vampires with two other people.</p>
   <p><i>"I died lol"</i></p>
+  </span>
   <br>
   <b><h2>Caleb Vranesic</h2></b>
   <p><i>Kleb</i></p>
