--- a/band.html
+++ b/band.html
@@ -7,6 +7,13 @@
     color: #14b0b8;
     font-family: "sans-serif", sans-serif;
   }
+  .border {
+  border-style: solid;
+  margin: 20px;
+  }
+  p {
+  margin: 20px;
+  }
 </style>
 <link rel="icon" href="icon.png">
 <!-- <img src="banner2.jpg" width="1440" height="400" alt="RJMM Banner"/> -->
@@ -25,10 +32,12 @@
 </head>
 <body>
   <center>
+  <br>
+  <br>
   <h1>Rocket Jockey Moon Monkeys</h1>
   <h2>The Band</h2>
   <br>
-  <span class="border">
+  <div class="border">
   <b><h2>Jayden Greville</h2></b>
   <p><i>Gayden</i></p>
   <img src="images/gayden.jpg" alt="jesus christ" height="250"/>
@@ -36,7 +45,7 @@
   <p>2019-present</p>
   <p>Died, came back from dead, ended up with no life, founded band as Jayden & The Vampires with two other people.</p>
   <p><i>"I died lol"</i></p>
-  </span>
+</div>
   <br>
   <b><h2>Caleb Vranesic</h2></b>
   <p><i>Kleb</i></p>
