--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     color: #14b0b8;
     font-family: "sans-serif", sans-serif;
   }
+  p {
+  margin: 20px;
+  }
 </style>
 <link rel="icon" href="icon.png">
 <!-- <img src="banner2.jpg" width="1440" height="400" alt="RJMM Banner"/> -->
@@ -25,6 +28,8 @@
 </head>
 <body>
   <center>
+  <br>
+  <br>
   <h1>Rocket Jockey Moon Monkeys</h1>
   </center>
 </body>
