--- a/band.html
+++ b/band.html
@@ -45,8 +45,9 @@
   <p>2019-present</p>
   <p>Died, came back from dead, ended up with no life, founded band as Jayden & The Vampires with two other people.</p>
   <p><i>"I died lol"</i></p>
-</div>
+  </div>
   <br>
+  <div class="border">
   <b><h2>Caleb Vranesic</h2></b>
   <p><i>Kleb</i></p>
   <img src="images/kleb.jpg" alt="hot" height="250"/>
@@ -54,7 +55,9 @@
   <p>2019-present</p>
   <p>Plays guitar. Founding Member.</p>
   <p><i>"I play guitar, very not well"</i></p>
+  </div>
   <br>
+  <div class="border">
   <b><h2>Connor McGettigan</h2></b>
   <p><i>Captain VB</i></p>
   <img src="images/vb.jpg" alt="never sober" height="250"/>
@@ -62,8 +65,10 @@
   <p>2019-present</p>
   <p>Plays instruments, founding member.</p>
   <p><i>"God I could do with some beer."</i></p>
+  </div>
   <br>
   <h1 style="color: black;" hidden>The Coolest Member</h1>
+  <div class="border">
   <b><h2>Connor Young</h2></b>
   <p><i>Hippy</i></p>
   <img src="images/hippy.png" alt="hippy" height="250"/>
@@ -71,7 +76,9 @@
   <p>2020-present</p>
   <p>Can't actually play any instruments, joined Joe Mama's Sleep Paralysis Demon for a talent show. We did(n't) win.</p>
   <p><i>"Quote goes here"</i></p>
+  </div>
   <br>
+  <div class="border">
   <b><h2>X</h2></b>
   <p><i>Monkey</i></p>
   <img src="images/gongiveittoya.jpg" height="250" alt="gon give it to ya"/>
@@ -79,7 +86,9 @@
   <p>2020-present</p>
   <p>Ape from the congo, spent his youth beating rocks with sticks. As an adult he utilised his rock beating skills to learn the drums and joined Joe Mama's Sleep Paralysis Demon for the school talent show.</p>
   <p><i>"Kefe"</i></p>
+  </div>
   <br>
+  <div class="border">
   <b><h2>John Walton</h2></b>
   <p><i>Horse</i></p>
   <img src="images/horse.jpg" alt="horse" height="250"/>
@@ -87,7 +96,9 @@
   <p>2020-present</p>
   <p>Man who plays guitar and sings. Joined after the worlds most amazing musical performance to help advance the band's career.</p>
   <p><i>"You might unlock his secret gay."</i></p>
+  </div>
   <br>
+  <div class="border">
   <b><h2>Cheg</h2></b>
   <p><i>The Leg</i></p>
   <img src="images/cheg.jpg" alt="cheg" height="250"/>
@@ -95,6 +106,7 @@
   <p>2020-present</p>
   <p>The band realised they were technically a boy band due to being all male, so they employed a female member to stop being a boy band.</p>
   <p><i>"Cheg."</i></p>
+  </div>
   </center>
 </body>
 </html>
