--- a/band.html
+++ b/band.html
@@ -36,6 +36,9 @@
   <br>
   <h1>Rocket Jockey Moon Monkeys</h1>
   <h2>The Band</h2>
+  </center>
+  <p>Formed in November 2019 as Jayden & The Vampires, Rocket Jockey Moon Monkeys have evolved significantly, gaining new members and creating new music. Starting with only three members, Jayden Greville, Connor McGettigan, and Caleb Vranesic, the band has since grown allowing them to have a more diverse sound with each member providing their own unique part to the band.</p>
+  <center>
   <br>
   <div class="border">
   <b><h2>Jayden Greville</h2></b>
