--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
   <br>
   <h1>Rocket Jockey Moon Monkeys</h1>
   </center>
+  <p>The band originally formed in 2019 because of (idk a shared passion of music or whatever reason we did so). It evolved into Joe Mama's Sleep Paralysis Demon with the addition of Connor Young and X for a talent show, where as fans of King Gizzard and The Lizard Wizard they performed a rendition of 'Hot Wax'. They didn't win.</p>
+  <p>It has now become the Rocket Jockey Moon Monkeys after a poll, and the addition of John Walton and Cheg. With each member coming from a diverse musical influence and background, expect a varied sound. With plans for a full album and more on the way, the Rocket Jockey Moon Monkeys reach for the stars - and with a slight chance they might get there.</p>
 </body>
 </html>
