--- a/music.html
+++ b/music.html
@@ -32,5 +32,6 @@
   <br>
   <h1>Rocket Jockey Moon Monkeys</h1>
   </center>
+  <p>All of our music can be found on our <a href="https://soundcloud.com/rjmm">Soundcloud</a>, <a href="https://rjmm.bandcamp.com/">Bandcamp</a>, and <a href="https://www.youtube.com/channel/UCu0uQK0nNwPU8UkgZNbJEMg">YouTube</a>. Currently we have no released albums or singles, however once we do release songs they will be posted below.</p>
 </body>
 </html>
